# AI_news_scrapper-agents-

./: README.md
news_scrapper/: README.md  pyproject.toml
news_scrapper/src/news_scrapper/: crew.py  main.py
news_scrapper/src/news_scrapper/config/: agents.yaml  tasks.yaml
news_scrapper/src/news_scrapper/news/: 2025-04-20-AI LLMs-news.md  2025-04-20-ipl 2025-news.md  2025-04-20_17-30-23_news_article.md
